# zmr-skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  zmr-education-standalone-fix-v2.patch
.agents/: writing-docs.md
.claude-plugin/: plugin.json
.github/workflows/: education-standalone.yml  education-v4-adapters.yml  education-v4-goldens.yml  education-v4-kernel.yml  education-v4-release.yml
.zmr-v4-apply-reports/: 20260715T045130Z.json
adapters/: __init__.py
adapters/shared/: __init__.py  semantic_text.py
capabilities/: __init__.py  python-runtime.lock.json
capabilities/reference/: __init__.py
capabilities/verification/: _shared.py
config/: education-pipeline.yaml
containers/education-v4-doc-tools/: Dockerfile  versions.env
docs/: UPSTREAM-SYNC.md
docs/education/: STANDALONE-DISTRIBUTION.md  zamery-analyze-student-work.md  zamery-build-english-item-banks.md  zamery-build-english-practice.md  zamery-build-video-learning.md  zamery-compose-english-assessments.md  zamery-create-english-presentations.md  zamery-create-ielts-practice.md  zamery-design-english-learning-sequences.md  zamery-design-english-learning.md  zamery-design-teaching-materials.md  zamery-monitor-english-learning.md  zamery-plan-english-reteaching.md  zamery-review-publish-pack.md  zamery-teach-english-concepts.md  zamery-teacher-copilot.md  zamery-understand-learners.md
docs/engineering/: ask-matt.md
docs/releases/: education-v3-final.md  education-v4-canary.md  education-v4-cutover.md
scripts/: build_education_standalone.py
tests/: test_build_education_standalone.py
(+679 files in other folders)
